fix(members): Fix member position on mobile.

--- a/src/scss/components/_member.scss
+++ b/src/scss/components/_member.scss
@@ -35,6 +35,7 @@
   border-radius: .8rem;
   outline: none;
   cursor: pointer;
+  vertical-align: top;
   user-select: none;
   transform: scale(0);
   transition: {
